# actix-web-async-graphql-rbatis

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/dbs/: mod.rs  mysql.rs
backend/src/gql/: mod.rs  mutations.rs  queries.rs
backend/src/users/: models.rs  services.rs
backend/src/util/: constant.rs
frontend-handlebars/: Cargo.toml
frontend-wasm/: Cargo.toml
