[package]
name = "backend"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"

dotenv = "0.15.0"
lazy_static = "1.4.0"


async-graphql = { version = "2.8.4", features = ["chrono"] }
async-graphql-actix-web = "2.8.4"
rbatis = { version = "1.8.84", default-features = false, features = ["mysql", "postgres"] }

serde = { version = "1.0.125", features = ["derive"] }
